examples/test/testpolicy15817.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15817
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key47: value10
      key13: value44
      key46: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value30
          key28: value43
      podSelector:
        matchLabels:
          key20: value3
          key17: value17
          key34: value39
